--- a/imports/ui/components/header/header.html
+++ b/imports/ui/components/header/header.html
@@ -2,15 +2,21 @@
   <header class="site-header shadow-lg fixed-top">
     <div class="container mx-auto">
       <div class="row align-items-center">
-        <a class="navbar-brand mr-auto my-0" href="/"><img src="/img/app-icons/logo-chess.png" class="chess-logo" alt="chess logo"><h1 class="d-inline" style="font-size: inherit !important;"><strong>Chess</strong></h1><span id="header-status"></span></a>
+        <a class="navbar-brand mr-auto my-0 go-to-href" data-href="/"><img src="/img/app-icons/logo-chess.png" class="chess-logo" alt="chess logo"><h1 class="d-inline" style="font-size: inherit !important;"><strong>Chess</strong></h1><span id="header-status"></span></a>
         <div class="menu-toggle open" title="Menu"></div>
         <nav class="navbar py-0">
           <ul class="nav navbar-nav">
             <li class="pt-4">
-              <a class="home" href="/">Home</a>
+              <a class="home go-to-href" data-href="/">Home</a>
             </li>
             <li class="pt-4">
-              <a class="about" href="/about">About</a>
+              <a class="about go-to-href" data-href="/about">About</a>
+            </li>
+            <li class="pt-4">
+              <a class="setup go-to-href" data-href="/set-up">Set up</a>
+            </li>
+            <li class="pt-4">
+              <a class="github" href="https://github.com/tungpham42/chessgame" target="_blank"><i class="fab fa-github"></i> GitHub</a>
             </li>
           </ul>
         </nav>
