--- a/imports/ui/components/rules/rules.html
+++ b/imports/ui/components/rules/rules.html
@@ -16,9 +16,9 @@
         <div class="modal-body">
           <p>There are 3 options: Play with friend, Play with AI, and Set up board</p>
           <ol>
-            <li><u>Play with friend:</u> Players press on the button <a target="_blank" href="/play-with-friend">"PLAY WITH FRIEND"</a> on the front page and practice with friend.</li>
-            <li><u>Play with AI:</u> Players play directly on the front page. There are 5 levels: <a target="_blank" href="/newbie">Newbie</a>, <a target="_blank" href="/easy">Easy</a>, <a target="_blank" href="/normal">Normal</a>, <a target="_blank" href="/hard">Hard</a>, and <a target="_blank" href="/insane">Insane</a>.</li>
-            <li><u>Set up board:</u> Players press on the link <a target="_blank" href="/set-up">"Set Up"</a>. In this option, players can arrange the chess pieces and press "CAPTURE THE BOARD" to challenge friends.</li>
+            <li><u>Play with friend:</u> Players press on the button <a class="go-to-href" data-href="/play-with-friend">"PLAY WITH FRIEND"</a> on the front page and practice with friend.</li>
+            <li><u>Play with AI:</u> Players play directly on the front page. There are 5 levels: <a class="go-to-href" data-href="/newbie">Newbie</a>, <a class="go-to-href" data-href="/easy">Easy</a>, <a class="go-to-href" data-href="/normal">Normal</a>, <a class="go-to-href" data-href="/hard">Hard</a>, and <a class="go-to-href" data-href="/insane">Insane</a>.</li>
+            <li><u>Set up board:</u> Players press on the link <a class="go-to-href" data-href="/set-up">"Set Up"</a>. In this option, players can arrange the chess pieces and press "CAPTURE THE BOARD" to challenge friends.</li>
           </ol>
         </div>
         <div class="modal-footer">
