--- a/public/css/layout/_content.scss
+++ b/public/css/layout/_content.scss
@@ -249,6 +249,9 @@ body {
 .fb_iframe_widget_fluid_desktop iframe {
   min-width:100%!important
 }
+.go-to-href, .add-fen {
+  cursor: pointer;
+}
 /* Responsive */
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 413px) {
