--- a/imports/ui/components/footer/footer.html
+++ b/imports/ui/components/footer/footer.html
@@ -10,13 +10,13 @@
         <div class="col-12 col-xl-3 col-lg-3 col-md-6 col-sm-12 mb-3">
           <ul class="list-unstyled">
             <li>
-              <a class="home go-to-href" data-href="/">Home</a>
+              <a class="home go-to-href" data-href="/"><i class="fad fa-home-lg-alt"></i> Home</a>
             </li>
             <li>
-              <a class="about go-to-href" data-href="/about">About</a>
+              <a class="about go-to-href" data-href="/about"><i class="fad fa-info-square"></i> About</a>
             </li>
             <li>
-              <a class="setup go-to-href" data-href="/set-up">Set up</a>
+              <a class="setup go-to-href" data-href="/set-up"><i class="fad fa-camera-retro"></i> Set up</a>
             </li>
             <li>
               <a class="github" href="https://github.com/tungpham42/chessgame" target="_blank"><i class="fab fa-github"></i> GitHub</a>
