--- a/imports/ui/components/header/header.html
+++ b/imports/ui/components/header/header.html
@@ -7,13 +7,13 @@
         <nav class="navbar py-0">
           <ul class="nav navbar-nav">
             <li class="pt-4">
-              <a class="home go-to-href" data-href="/">Home</a>
+              <a class="home go-to-href" data-href="/"><i class="fad fa-home-lg-alt"></i> Home</a>
             </li>
             <li class="pt-4">
-              <a class="about go-to-href" data-href="/about">About</a>
+              <a class="about go-to-href" data-href="/about"><i class="fad fa-info-square"></i> About</a>
             </li>
             <li class="pt-4">
-              <a class="setup go-to-href" data-href="/set-up">Set up</a>
+              <a class="setup go-to-href" data-href="/set-up"><i class="fad fa-camera-retro"></i> Set up</a>
             </li>
             <li class="pt-4">
               <a class="github" href="https://github.com/tungpham42/chessgame" target="_blank"><i class="fab fa-github"></i> GitHub</a>
